// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoItem should render correct with completed 1`] = `
<TodoItemDiv>
  <todoItem__LowDiv>
    <todoItem__ClockDiv>
      <Icon
        type="clock-circle-o"
      />
    </todoItem__ClockDiv>
    <div
      style={
        Object {
          "gridArea": "notification-time",
        }
      }
    >
      Thursday, January 1, 1970 8:00 AM
    </div>
    <todoItem__CreatedTimeDiv>
      <span>
        Creat at: 
      </span>
      Thursday, January 1, 1970 8:00 AM
    </todoItem__CreatedTimeDiv>
    <todoItem__DescriptionDiv>
      <p>
        Hello!
      </p>
    </todoItem__DescriptionDiv>
    <todoItem__ActionButtonDiv>
      <Connect(TodoActionButton)
        todo={
          Object {
            "complete": true,
            "createTime": 0,
            "description": "Hello!",
            "dueDatetime": 10,
            "id": "1",
          }
        }
      />
    </todoItem__ActionButtonDiv>
    <todoItem__CompleteMarkDiv>
      Complete
    </todoItem__CompleteMarkDiv>
  </todoItem__LowDiv>
</TodoItemDiv>
`;

exports[`TodoItem should render correct with long description 1`] = `
<TodoItemDiv>
  <todoItem__LowDiv>
    <todoItem__ClockDiv>
      <Icon
        type="clock-circle-o"
      />
    </todoItem__ClockDiv>
    <div
      style={
        Object {
          "gridArea": "notification-time",
        }
      }
    >
      Thursday, January 1, 1970 8:00 AM
    </div>
    <todoItem__CreatedTimeDiv>
      <span>
        Creat at: 
      </span>
      Thursday, January 1, 1970 8:00 AM
    </todoItem__CreatedTimeDiv>
    <todoItem__DescriptionDiv>
      <p>
        Hello!
LineTwo
 ...
      </p>
    </todoItem__DescriptionDiv>
    <todoItem__ActionButtonDiv>
      <Connect(TodoActionButton)
        enableComplete={true}
        enableEdit={true}
        todo={
          Object {
            "complete": false,
            "createTime": 0,
            "description": "Hello!
LineTwo
LineThree",
            "dueDatetime": 10,
            "id": "1",
          }
        }
      />
    </todoItem__ActionButtonDiv>
  </todoItem__LowDiv>
</TodoItemDiv>
`;

exports[`TodoItem should render correct with short description 1`] = `
<TodoItemDiv>
  <todoItem__LowDiv>
    <todoItem__ClockDiv>
      <Icon
        type="clock-circle-o"
      />
    </todoItem__ClockDiv>
    <div
      style={
        Object {
          "gridArea": "notification-time",
        }
      }
    >
      Thursday, January 1, 1970 8:00 AM
    </div>
    <todoItem__CreatedTimeDiv>
      <span>
        Creat at: 
      </span>
      Thursday, January 1, 1970 8:00 AM
    </todoItem__CreatedTimeDiv>
    <todoItem__DescriptionDiv>
      <p>
        Hello!
      </p>
    </todoItem__DescriptionDiv>
    <todoItem__ActionButtonDiv>
      <Connect(TodoActionButton)
        enableComplete={true}
        enableEdit={true}
        todo={
          Object {
            "complete": false,
            "createTime": 0,
            "description": "Hello!",
            "dueDatetime": 10,
            "id": "1",
          }
        }
      />
    </todoItem__ActionButtonDiv>
  </todoItem__LowDiv>
</TodoItemDiv>
`;
